--- a/less/about.less
+++ b/less/about.less
@@ -17,7 +17,7 @@ h6{
     font-size: 36px;
     font-family: 'Open Sans';
     font-weight: bold;
-    color: #106ac7;
+    color: #1aa72d;
     padding: 40px;
     margin-left: 10px;
 }
@@ -41,7 +41,7 @@ h6{
     background-image: none;
 }
 .btn-link {
-    color: #1E6CC6;
+    color: #1aa72d;
     background-color: transparent;
     text-decoration: none !important;
     font-size: 20px;
@@ -49,7 +49,7 @@ h6{
     padding-left: 25px;
   }
   .btn-link:hover {
-    color: #1E6CC6;
+    color: #1aa72d;
     background-color: transparent;
     text-decoration: none !important;
     font-size: 20px;
@@ -83,4 +83,7 @@ h6{
   border-right: 1px solid #d9d9d9;
   color: #000000;
   padding-left:30px;
+}
+.hover:hover{
+  background-color: red;
 }
