--- a/less/landing.less
+++ b/less/landing.less
@@ -32,6 +32,8 @@ h6{
     padding-left: 19px;
     padding-right: 19px;
     border-radius: 50px ;
+    color: #ffffff;
+    background-color:  #15D518 !important;
     font-family: 'Open Sans',sans-serif;
     font-size: 14px;
 }
@@ -55,10 +57,10 @@ h6{
   background-color: #ffffff;
   font-size: 22px;
   font-weight: 600;
-  color: #0664c5;
+  color: #15D518;
   border-radius: 50px;
   margin-left: 20px;
-  border-color: #0664c5;
+  border-color:#ffffff;
   border-width:3px ;
  
 }
@@ -158,7 +160,7 @@ h6{
 .secfoot{
   padding-top: 50px;
   padding-bottom: 50px;
-   background-image: linear-gradient(98deg, #0e76ef, #2e8df6 52%, #137bf5);
+  background-image: linear-gradient(98deg, #0eef34,#15D518 52%, #50c718);
 }
 .txtsecfoot{
   color:#ffffff;
