--- a/css/linkmain.css
+++ b/css/linkmain.css
@@ -3452,7 +3452,8 @@ body {
   font-size: .8em;
   margin-bottom: 2em;
   position: relative;
-  z-index: 10; }
+  z-index: 10;
+   }
   .powered-by-shorby a {
     color: inherit;
     text-decoration: none; }
