--- a/css/style-thankyou.css
+++ b/css/style-thankyou.css
@@ -4,7 +4,7 @@ html {
   width: 100%;
   height: 100%;
 }
-
+  
 
 /*SETUP*/
 body,
@@ -37,7 +37,7 @@ h6 {
 
 .page-title h1 {
   text-align: center;
-  color: #fff;
+  color: #505050;
   font-size: 48px;
   font-weight: 600;
 }
@@ -48,7 +48,7 @@ h6 {
   max-width: 600px;
   display: block;
   margin: 0 auto;
-  color: #fff;
+color:#505050 ;
   font-size: 22px;
   font-weight: 400;
   line-height: 1.3;
@@ -57,7 +57,7 @@ h6 {
 
 /*KONTEN*/
 .konten {
-  margin-top: 50px;
+  margin-top: 10px;
   margin-bottom: 50px;
 }
 
