--- a/css/dash.css
+++ b/css/dash.css
@@ -1,12 +1,17 @@
-.notif{
-    padding-top:50px; 
-    padding-bottom:50px;
+.notif
+{
+    padding:50px 0 0 0 !important;
 }
-.carddash{
+.carddash
+{
     margin: 35px 0 35px 0; 
-    width:100%; 
-    height:400px;
-    background-color: #ffffff;
+    background-color: #F6F6F6;
+}
+.noshow
+{   
+    padding: 50px 0 50px 0;
+    margin: 35px 0 35px 0; 
+    background-color: #F6F6F6;
 }
 .textdash
 {
@@ -14,6 +19,22 @@
     margin:0 auto ;
     text-align:center;
 }
+ .form-controll {
+        display: inline;
+        width: auto;
+        background-color: #F2F2F2;
+    }
+  .form-cari{
+      background-color: #F2F2F2;
+      background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    }
+  .imga {
+      width: 27px;
+      height: 72px;
+      border-radius: 60%;
+    }
 /*hr {
     height: .25rem;
     width: 25%;
@@ -22,6 +43,55 @@
     border: none;
     transition: .3s ease-in-out;
   }*/
+  /*Profile Pic Start*/
+.picture-container{
+    position: relative;
+    cursor: pointer;
+    text-align: center;
+}
+.picture{
+    width: 106px;
+    height: 106px;
+    background-color: #999999;
+    border: 4px solid #CCCCCC;
+    color: #FFFFFF;
+    border-radius: 50%;
+    margin: 0px auto;
+    overflow: hidden;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+}
+.picture:hover{
+    border-color: #2ca8ff;
+}
+.content.ct-wizard-green .picture:hover{
+    border-color: #05ae0e;
+}
+.content.ct-wizard-blue .picture:hover{
+    border-color: #3472f7;
+}
+.content.ct-wizard-orange .picture:hover{
+    border-color: #ff9500;
+}
+.content.ct-wizard-red .picture:hover{
+    border-color: #ff3b30;
+}
+.picture input[type="file"] {
+    cursor: pointer;
+    display: block;
+    height: 100%;
+    left: 0;
+    opacity: 0 !important;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.picture-src{
+    width: 100%;
+    
+}
+/*Profile Pic End*/
 .margin{
     margin-bottom:20px;  
 }
@@ -61,32 +131,6 @@
   .btnsingle:hover{
     text-decoration: none;
     color: #ffffff;
-  }
-.link:after{
-    content: '';
-    position: absolute;
-    width: 0; height: 3px;
-    display: block;
-    margin-top: 5px;
-    right: 0;
-    color:#4a9c1a;
-    background: #fff;
-    transition: width .2s ease;
-    -webkit-transition: width .2s ease;
-  }
-  .link{
-    position: relative;
-    color:#4a9c1a;
-  }
-  
-  .link:hover:after{
-    width: 100%;
-    left: 0;
-    color:#4a9c1a;
-    background: rgb(11, 155, 18);
-  }
-  .input-stack {
-    margin-bottom: 20px;
   }
   /* The switch - the box around the slider */
 .switch {
@@ -162,3 +206,99 @@ hr.own {
  .socialmedia{
   margin-bottom: 20px;
  }
+
+ .project-tab {
+    padding: 10%;
+    margin-top: -8%;
+}
+.project-tab #tabs{
+    background: #007b5e;
+    color: #eee;
+}
+.project-tab #tabs h6.section-title{
+    color: #eee;
+}
+.project-tab #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #0062cc;
+    background-color: transparent;
+    border-color: transparent transparent #f3f3f3;
+    border-bottom: 3px solid !important;
+    font-size: 16px;
+    font-weight: bold;
+}
+.project-tab .nav-link {
+    border: 1px solid transparent;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+    border-bottom: none;
+    color: #0062cc;
+    font-size: 16px;
+    font-weight: 600;
+}
+.project-tab .nav-link:hover {
+    border: none;
+}
+.project-tab thead{
+    background: #f3f3f3;
+    color: #333;
+}
+.project-tab a{
+    text-decoration: none;
+    color: #333;
+    font-weight: 600;
+}
+ .nav-tabs{
+      border-bottom: none;
+    }
+ 
+    .mobile{
+      width: 335px;
+      height: 586px;
+      background:#F0F1F1;
+      border-radius: 30px;
+      border:2px solid rgba(0,0,0,.3);
+      box-shadow: inset 0 0 8px rgba(0,0,0,.3);
+    }
+    .mobile1{
+      width: 331px;
+      height: 580px;
+      background:#000000;
+      border-radius: 30px;
+      border:2px solid rgba(0,0,0,.3);
+      box-shadow: inset 0 0 8px rgba(0,0,0,.3);
+    }
+    .screen
+    {
+      margin-top: 31px;
+      position: relative;
+      background: #ffffff;
+      width: 317px;
+      height: 568px;
+      top: -54px;
+      margin:58px auto;
+      overflow: hidden;
+      border-radius: 30px;
+      border:2px solid rgba(0,0,0,.3);
+      box-shadow: inset 0 0 8px rgba(0,0,0,.3);
+    }
+    .home{
+      position: absolute;
+      bottom: 15px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 40px;
+      height: 40px;
+      background: #fff;
+      box-shadow: inset 0 0 7px rgba(0,0,0,.1);
+      border-radius:50%;
+      border:2px solid #cecece;
+      box-sizing: border-box;
+      cursor: pointer;
+    }
+ 
+.fixed{
+    position: fixed;
+    top: 63px;
+    left: 56%;
+    width: 25%;
+}
