--- a/css/template.css
+++ b/css/template.css
@@ -1,5 +1,78 @@
-.lightblue
+.colorgradient1
 {
   background-image: linear-gradient(339deg, #21d4fd, #b721ff);
 }
-
+.colorgradient2
+{
+  background-image: linear-gradient(134deg, #00b4db, #1094c2);
+}
+.colorgradient3
+{
+	background-image: linear-gradient(139deg, #25b7b2, #3b9893);
+}
+.colorgradient4{
+	background-image: linear-gradient(133deg, #fc7a3c, #ed4d55);
+}
+.colorgradient5{
+	background-image: linear-gradient(312deg, #aa19e7, #2333bf);
+}
+.colorgradient6{
+	 background-image: linear-gradient(133deg, #ae92d3, rgba(153, 85, 242, 0.99));
+}
+.colorgradient7{
+	  background-image: linear-gradient(to bottom, #f7971e, #ffd200);
+}
+.colorgradient8{
+	 background-image: linear-gradient(45deg, #05a907, #17abaa);
+}
+.colorgradient9{
+	 background-image: linear-gradient(229deg, #ff4e50, #ff8158 41%, #f9d423);
+}
+.colorgradient10{
+	 background-image: linear-gradient(229deg, #1353b9, #38aee9 44%, #0ae68f);
+}
+.colorgradient11{
+	 background-image: linear-gradient(229deg, #1353b9, #38aee9 44%, #0ae68f);
+}
+.colorgradient12{
+	background-image: linear-gradient(134deg, #0e76ef, #4497f1 52%, #137bf5);
+}
+.colorgradient13{
+	background-image: linear-gradient(45deg, #2c1872, rgba(186, 55, 143, 0.98) 38%, rgba(235, 96, 79, 0.97) 66%, rgba(250, 218, 93, 0.95));
+}
+.colorgradient14{
+	background-image: linear-gradient(to bottom, #1a2980, #26d0ce);
+}
+.colorgradient15{
+	background-image: linear-gradient(to bottom, #52c234, #061700);
+}
+.colorgradient16{
+	background-image: linear-gradient(to bottom, #e65c00, #f9d423);
+}
+.colorgradient17{
+	background-image: linear-gradient(to bottom, #4ecdc4, #556270);
+}
+.colorgradient18{
+	background-image: linear-gradient(to bottom, #f7ff00, #db36a4);
+}
+.colorgradient19{
+	background-image: linear-gradient(to bottom, #1e3c72, #2a5298);
+}
+.colorgradient20{
+	background-image: linear-gradient(to bottom, #1d976c, #93f9b9);
+}
+.colorgradient21{
+	background-image: linear-gradient(133deg, #c2ffd8, #465efb);
+}
+.colorgradient22{
+	 background-image: linear-gradient(133deg, #97abff, #123597);
+}
+.colorgradient23{
+	 background-image: linear-gradient(133deg, #3b2667, #bc78ec);
+}
+.colorgradient24{
+	 background-image: linear-gradient(133deg, #dac72c, #49c628);
+}
+.colorgradient25{
+	 background-image: linear-gradient(133deg, #f761a1, #8c1bab);s
+}
