--- a/css/template.css
+++ b/css/template.css
@@ -74,5 +74,80 @@
 	 background-image: linear-gradient(133deg, #dac72c, #49c628);
 }
 .colorgradient25{
-	 background-image: linear-gradient(133deg, #f761a1, #8c1bab);s
+	 background-image: linear-gradient(133deg, #f761a1, #8c1bab);
+}
+.colorgradient26{
+	 background-image: linear-gradient(133deg, #ffdb01, #0e197d);
+}
+.colorgradient27{
+	 background-image: linear-gradient(133deg, #f05f57, #360940);
+}
+.colorgradient28{
+	background-image: linear-gradient(133deg, #ff6fd8, #3813c2);
+}
+.colorgradient29{
+	background-image: linear-gradient(133deg, #ffa8a8, #fcff00);
+}
+.colorgradient30{
+	 background-image: linear-gradient(133deg, #3c8ce7, #00eaff);
+}
+.colorgradient31{
+	 background-image: linear-gradient(to top, #7028e4, #e5b2ca);
+}
+.colorgradient32{
+	 background-image: linear-gradient(to bottom, #fbc2eb, #a18cd1);
+}
+.colorgradient33{
+	 background-image: linear-gradient(to top, #ffb199, #ff0844);
+}
+.colorgradient34{
+	 background-image: linear-gradient(296deg, #fbab7e, #f7ce68);
+}
+.colorgradient35{
+	  background-image: linear-gradient(227deg, #ae8b9c, #8baaaa);
+}
+.colorgradient36{
+	 background-image: linear-gradient(227deg, #7de2fc, #b9b6e5);
+}
+.colorgradient37{
+	 background-image: linear-gradient(to left, #b12a5b, #cf556c 25%, #ff8c7f 63%, #ff8177);
+}
+.colorgradient38{
+	 background-image: linear-gradient(to left, #f9d423, #f83600);
+}
+.colorgradient39{
+	 background-image: linear-gradient(to top, #009efd, #2af598);
+}
+.colorgradient40{
+	 background-image: linear-gradient(to top, #04befe, #4481eb);
+}
+.colorgradient41{
+	 background-image: linear-gradient(to bottom, #f857a6, #ff5858);
+}
+.colorgradient42{
+	 background-image: linear-gradient(to left, #517fa4, #243949);
+}
+.colorgradient43{
+	 background-image: linear-gradient(to top, #fa71cd, #c471f5);
+}
+.colorgradient44{
+	 background-image: radial-gradient(circle at 50% 50%, #16d9e3, #46aef7);
+}
+.colorgradient45{
+	background-image: linear-gradient(to left, #6a11cb, #2575fc);
+}
+.colorgradient46{
+	background-image: linear-gradient(to left, #6a11cb, #2575fc);
+}
+.colorgradient47{
+	background-image: linear-gradient(to top, #f9f047, #0fd850);
+}
+.colorgradient48{
+	background-image: linear-gradient(to bottom, #00ecbc, #007adf);
+}
+.colorgradient49{
+	 background-image: linear-gradient(227deg, #a445b2, #d41872 52%, #ff0066);
+}
+.colorgradient50{
+	background-image: linear-gradient(to bottom, #56ab2f, #a8e063);
 }
