--- a/css/landing.css
+++ b/css/landing.css
@@ -11,6 +11,18 @@ h6 {
   font-weight: 700;
 }
 
+body {
+  background-color: #fff;
+}
+
+p,span {
+  color: #505050;
+}
+
+.navbar-laravel {
+  box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+}
+
 .navbar {
   padding-top: 30px;
   padding-bottom: 30px;
