--- a/css/template.css
+++ b/css/template.css
@@ -221,59 +221,7 @@
     margin: 0;
     width: 21.333%;
     text-align: center; }
-/*.messengers {
-  clear: both; }
-  .messengers.links-num-3 .link, .messengers.links-num-4 .link, .messengers.links-num-5 .link, .messengers.links-num-6 .link, .messengers.links-num-7 .link, .messengers.links-num-8 .link, .messengers.links-num-9 .link, .messengers.links-num-10 .link, .messengers.links-num-11 .link, .messengers.links-num-12 .link {
-    max-width: 32.33333%; }*/
 
-
-html {
-  font-family: sans-serif;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
-
-body {
-  margin: 0;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #777;
-  text-align: left;
-  background-color: #FFF; }
-
-  html {
-  min-height: 100%; }
-
-body {
-  background-repeat: no-repeat;
-  min-height: 100%; 
-}
-
- /* .messengers .btn .fa-network + span {
-    display: none; }*/
-/*  .messengers.links-num-1 .link:nth-of-type(1), .messengers.links-num-4 .link:nth-of-type(1), .messengers.links-num-7 .link:nth-of-type(1), .messengers.links-num-10 .link:nth-of-type(1), .messengers.links-num-1 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-10 .link:nth-of-type(2) {
-    max-width: 100%; }
-    .messengers.links-num-1 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-4 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-7 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-10 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span {
-      display: inline-block; }
-  .messengers.links-num-2 .link:nth-of-type(1), .messengers.links-num-5 .link:nth-of-type(1), .messengers.links-num-8 .link:nth-of-type(1), .messengers.links-num-11 .link:nth-of-type(1), .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-11 .link:nth-of-type(2) {
-    max-width: 50%; }
-  .messengers .btn {
-    overflow: hidden;
-    vertical-align: middle; }
-    .messengers .btn .fa-network {
-      display: inline-block;
-      font-size: 2em;
-      margin-top: -0.25em;
-      margin-bottom: -0.25em; }
-    .messengers .btn .fa-network + span {
-      margin-left: 0.6em; }
-  .messengers .link {
-    display: inline-block;
-    width: 100%; }*/
 .container {
   width: 100%;
   padding-right: 0.62em;
@@ -299,8 +247,8 @@ body {
       width: 1em;
       height: 1em; }
 
-[tabindex="-1"]:focus {
-  outline: 0 !important; }
+/*[tabindex="-1"]:focus {
+  outline: 0 !important; }*/
 
 .buttons {
   margin-bottom: 1em; }
