--- a/css/theme.css
+++ b/css/theme.css
@@ -23,27 +23,27 @@
 }
 .colorgradient6{
   color:#fff;
-   background-image: linear-gradient(133deg, #ae92d3, rgba(153, 85, 242, 0.99));
+  background-image: linear-gradient(133deg, #ae92d3, rgba(153, 85, 242, 0.99));
 }
 .colorgradient7{
   color:#fff;
-    background-image: linear-gradient(to bottom, #f7971e, #ffd200);
+  background-image: linear-gradient(to bottom, #f7971e, #ffd200);
 }
 .colorgradient8{
   color:#fff;
-   background-image: linear-gradient(45deg, #05a907, #17abaa);
+  background-image: linear-gradient(45deg, #05a907, #17abaa);
 }
 .colorgradient9{
   color:#fff;
-   background-image: linear-gradient(229deg, #ff4e50, #ff8158 41%, #f9d423);
+  background-image: linear-gradient(229deg, #ff4e50, #ff8158 41%, #f9d423);
 }
 .colorgradient10{
   color:#fff;
-   background-image: linear-gradient(229deg, #1353b9, #38aee9 44%, #0ae68f);
+  background-image: linear-gradient(229deg, #1353b9, #38aee9 44%, #0ae68f);
 }
 .colorgradient11{
   color:#fff;
-   background-image: linear-gradient(to bottom, #fe8c00, #f83600);
+  background-image: linear-gradient(to bottom, #fe8c00, #f83600);
 }
 .colorgradient12{
   color:#fff;
@@ -87,27 +87,27 @@
 }
 .colorgradient22{
   color:#fff;
-   background-image: linear-gradient(133deg, #97abff, #123597);
+  background-image: linear-gradient(133deg, #97abff, #123597);
 }
 .colorgradient23{
   color:#fff;
-   background-image: linear-gradient(133deg, #3b2667, #bc78ec);
+  background-image: linear-gradient(133deg, #3b2667, #bc78ec);
 }
 .colorgradient24{
   color:#fff;
-   background-image: linear-gradient(133deg, #dac72c, #49c628);
+  background-image: linear-gradient(133deg, #dac72c, #49c628);
 }
 .colorgradient25{
   color:#fff;
-   background-image: linear-gradient(133deg, #f761a1, #8c1bab);
+  background-image: linear-gradient(133deg, #f761a1, #8c1bab);
 }
 .colorgradient26{
   color:#fff;
-   background-image: linear-gradient(133deg, #ffdb01, #0e197d);
+  background-image: linear-gradient(133deg, #ffdb01, #0e197d);
 }
 .colorgradient27{
   color:#fff;
-   background-image: linear-gradient(133deg, #f05f57, #360940);
+  background-image: linear-gradient(133deg, #f05f57, #360940);
 }
 .colorgradient28{
   color:#fff;
@@ -119,63 +119,63 @@
 }
 .colorgradient30{
   color:#fff;
-   background-image: linear-gradient(133deg, #3c8ce7, #00eaff);
+  background-image: linear-gradient(133deg, #3c8ce7, #00eaff);
 }
 .colorgradient31{
   color:#fff;
-   background-image: linear-gradient(to top, #7028e4, #e5b2ca);
+  background-image: linear-gradient(to top, #7028e4, #e5b2ca);
 }
 .colorgradient32{
   color:#fff;
-   background-image: linear-gradient(to bottom, #fbc2eb, #a18cd1);
+  background-image: linear-gradient(to bottom, #fbc2eb, #a18cd1);
 }
 .colorgradient33{
   color:#fff;
-   background-image: linear-gradient(to top, #ffb199, #ff0844);
+  background-image: linear-gradient(to top, #ffb199, #ff0844);
 }
 .colorgradient34{
   color:#fff;
-   background-image: linear-gradient(296deg, #fbab7e, #f7ce68);
+  background-image: linear-gradient(296deg, #fbab7e, #f7ce68);
 }
 .colorgradient35{
   color:#fff;
-    background-image: linear-gradient(227deg, #ae8b9c, #8baaaa);
+  background-image: linear-gradient(227deg, #ae8b9c, #8baaaa);
 }
 .colorgradient36{
   color:#fff;
-   background-image: linear-gradient(227deg, #7de2fc, #b9b6e5);
+  background-image: linear-gradient(227deg, #7de2fc, #b9b6e5);
 }
 .colorgradient37{
   color:#fff;
-   background-image: linear-gradient(to left, #b12a5b, #cf556c 25%, #ff8c7f 63%, #ff8177);
+  background-image: linear-gradient(to left, #b12a5b, #cf556c 25%, #ff8c7f 63%, #ff8177);
 }
 .colorgradient38{
   color:#fff;
-   background-image: linear-gradient(to left, #f9d423, #f83600);
+  background-image: linear-gradient(to left, #f9d423, #f83600);
 }
 .colorgradient39{
   color:#fff;
-   background-image: linear-gradient(to top, #009efd, #2af598);
+  background-image: linear-gradient(to top, #009efd, #2af598);
 }
 .colorgradient40{
   color:#fff;
-   background-image: linear-gradient(to top, #04befe, #4481eb);
+  background-image: linear-gradient(to top, #04befe, #4481eb);
 }
 .colorgradient41{
   color:#fff;
-   background-image: linear-gradient(to bottom, #f857a6, #ff5858);
+  background-image: linear-gradient(to bottom, #f857a6, #ff5858);
 }
 .colorgradient42{
   color: #fff;
-   background-image: linear-gradient(to left, #517fa4, #243949);
+  background-image: linear-gradient(to left, #517fa4, #243949);
 }
 .colorgradient43{
   color: #fff;
-   background-image: linear-gradient(to top, #fa71cd, #c471f5);
+  background-image: linear-gradient(to top, #fa71cd, #c471f5);
 }
 .colorgradient44{
   color:#fff;
-   background-image: radial-gradient(circle at 50% 50%, #16d9e3, #46aef7);
+  background-image: radial-gradient(circle at 50% 50%, #16d9e3, #46aef7);
 }
 .colorgradient45{
   color:#fff;
@@ -195,9 +195,409 @@
 }
 .colorgradient49{
   color:#fff;
-   background-image: linear-gradient(227deg, #a445b2, #d41872 52%, #ff0066);
+  background-image: linear-gradient(227deg, #a445b2, #d41872 52%, #ff0066);
 }
 .colorgradient50{
   color:#fff;
+  background-image: linear-gradient(to bottom, #56ab2f, #a8e063);
+}
+
+.theme1 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(339deg, #21d4fd, #b721ff);
+}
+
+.theme2 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(134deg, #00b4db, #1094c2);
+}
+
+.theme3 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(139deg, #25b7b2, #3b9893);
+}
+
+.theme4 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #fc7a3c, #ed4d55);
+}
+
+.theme5 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(312deg, #aa19e7, #2333bf);
+}
+
+.theme6 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #ae92d3, rgba(153, 85, 242, 0.99));
+}
+
+.theme7 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #f7971e, #ffd200);
+}
+
+.theme8 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(45deg, #05a907, #17abaa);
+}
+
+.theme9 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(229deg, #ff4e50, #ff8158 41%, #f9d423);
+}
+
+.theme10 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(229deg, #1353b9, #38aee9 44%, #0ae68f);
+}
+
+.theme11 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #fe8c00, #f83600);
+}
+
+.theme12 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(134deg, #0e76ef, #4497f1 52%, #137bf5);
+}
+
+.theme13 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(45deg, #2c1872, rgba(186, 55, 143, 0.98) 38%, rgba(235, 96, 79, 0.97) 66%, rgba(250, 218, 93, 0.95));
+}
+
+.theme14 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #1a2980, #26d0ce);
+}
+
+.theme15 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #52c234, #061700);
+}
+
+.theme16 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #e65c00, #f9d423);
+}
+
+.theme17 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #4ecdc4, #556270);
+}
+
+.theme18 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #f7ff00, #db36a4);
+}
+
+.theme19 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #1e3c72, #2a5298);
+}
+
+.theme20 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #1d976c, #93f9b9);
+}
+
+.theme21 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #c2ffd8, #465efb);
+}
+
+.theme22 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #97abff, #123597);
+}
+
+.theme23 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #3b2667, #bc78ec);
+}
+
+.theme24 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #dac72c, #49c628);
+}
+
+.theme25 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #f761a1, #8c1bab);
+}
+
+.theme26 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #ffdb01, #0e197d);
+}
+
+.theme27 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #f05f57, #360940);
+}
+
+.theme28 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #ff6fd8, #3813c2);
+}
+
+.theme29 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #ffa8a8, #fcff00);
+}
+
+.theme30 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(133deg, #3c8ce7, #00eaff);
+}
+
+.theme31 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to top, #7028e4, #e5b2ca);
+}
+
+.theme32 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #fbc2eb, #a18cd1);
+}
+
+.theme33 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to top, #ffb199, #ff0844);
+}
+
+.theme34 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(296deg, #fbab7e, #f7ce68);
+}
+
+.theme35 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(227deg, #ae8b9c, #8baaaa);
+}
+
+.theme36 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(227deg, #7de2fc, #b9b6e5);
+}
+
+.theme37 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to left, #b12a5b, #cf556c 25%, #ff8c7f 63%, #ff8177);
+}
+
+.theme38 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to left, #f9d423, #f83600);
+}
+
+.theme39 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to top, #009efd, #2af598);
+}
+
+.theme40 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to top, #04befe, #4481eb);
+}
+
+.theme41 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #f857a6, #ff5858);
+}
+
+.theme42 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to left, #517fa4, #243949);
+}
+
+.theme43 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to top, #fa71cd, #c471f5);
+}
+
+.theme44 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: radial-gradient(circle at 50% 50%, #16d9e3, #46aef7);
+}
+
+.theme45 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to left, #6a11cb, #2575fc);
+}
+
+.theme46 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(227deg, #7742b2, #f180ff 52%, #fd8bd9);
+}
+
+.theme47 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to top, #f9f047, #0fd850);
+}
+
+.theme48 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(to bottom, #00ecbc, #007adf);
+}
+
+.theme49 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: linear-gradient(227deg, #a445b2, #d41872 52%, #ff0066);
+}
+
+.theme50 {
+  width: 70.3px;
+  height: 62px;
+  border-radius: 8px;
+  cursor: pointer;
   background-image: linear-gradient(to bottom, #56ab2f, #a8e063);
 }
