--- a/css/landing.css
+++ b/css/landing.css
@@ -19,6 +19,11 @@ p,span {
   color: #505050;
 }
 
+.dropdown-menu {
+  right: 0;
+  left: auto;
+}
+
 .navbar-laravel {
   box-shadow: 0 2px 4px rgba(0,0,0,0.15);
 }
